--- a/src/App.css
+++ b/src/App.css
@@ -2,25 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-input[type="range"]::-webkit-slider-runnable-track {
+input[type='range']::-webkit-slider-runnable-track {
   @apply h-[10px] rounded-md;
 }
-input[type="range"]::-webkit-slider-thumb {
+input[type='range']::-webkit-slider-thumb {
   @apply appearance-none -mt-[4px] w-[19px] h-[19px] rounded-full border-solid border-gray-700 bg-cyan-500 hover:bg-cyan-600 cursor-pointer;
 }
 
-input[type="range"]::-moz-range-track {
+input[type='range']::-moz-range-track {
   @apply h-[10px] rounded-md;
 }
 
-input[type="range"]::-moz-range-thumb {
+input[type='range']::-moz-range-thumb {
   @apply appearance-none -mt-[4px] w-[19px] h-[19px] rounded-full border-solid border-gray-700 bg-cyan-500 hover:bg-cyan-600 cursor-pointer;
 }
 
-input[type="range"]::-ms-track {
+input[type='range']::-ms-track {
   @apply h-[10px] rounded-md;
 }
 
-input[type="range"]::-ms-thumb {
+input[type='range']::-ms-thumb {
   @apply appearance-none -mt-[4px] w-[19px] h-[19px] rounded-full border-solid border-gray-700 bg-cyan-500 hover:bg-cyan-600 cursor-pointer;
 }
